--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 :root {
-  --background-main: #f5f5f5;
   --background-nav: #ffffff;
   --background-team: #f5f4fa;
   --background-accent: #2f303a;
@@ -10,7 +9,7 @@
 }
 
 body {
-  font-family: "Roboto", "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: var(--text-main);
 }
 
@@ -25,6 +24,7 @@ body {
   line-height: 1.17;
   text-decoration: none;
   color: #000000;
+  letter-spacing: 0.03em;
 }
 
 .logo-web {
@@ -36,13 +36,12 @@ body {
 }
 
 .header-item {
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  color: var(--text-secondary);
+  color: var(--text-main);
 }
 
 .header-item:hover,
@@ -50,7 +49,7 @@ body {
   color: var(--text-accent);
 }
 
-li {
+.list {
   list-style: none;
 }
 
@@ -59,7 +58,6 @@ li {
 }
 
 .heading-main {
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -79,6 +77,7 @@ li {
   border: none;
 
   font-weight: 700;
+  font-size: 16px;
   line-height: 1.875;
   /* identical to box height, or 188% */
 
@@ -92,20 +91,15 @@ li {
   padding: 10px 32px;
 }
 
-.features-section {
-  background-color: var(--background-main);
-}
-
 .heading-secondary {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17x;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
-.heading-features {
-  font-style: normal;
+.features-heading {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -113,13 +107,11 @@ li {
   text-transform: uppercase;
 }
 
-.text-features {
+.features-text {
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
-
   letter-spacing: 0.03em;
-
   color: var(--text-secondary);
 }
 
@@ -127,7 +119,7 @@ li {
   background-color: var(--background-team);
 }
 
-.heading-team {
+.team-heading {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -136,7 +128,7 @@ li {
   letter-spacing: 0.03em;
 }
 
-.text-team {
+.team-text {
   line-height: 1.18;
   /* identical to box height */
   text-align: center;
@@ -174,22 +166,20 @@ li {
   background-color: var(--background-accent);
 }
 
-.main-section {
-  background-color: var(--background-main);
-}
-
 .filter-button {
-  background: var(--background-team);
-  border-radius: 4px;
-  padding: 6px 22px;
-  border: none;
-
-  font-weight: 500;
+  font-family: inherit;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.625;
   /* identical to box height, or 162% */
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--text-main);
+
+  background: var(--background-team);
+  border-radius: 4px;
+  padding: 6px 22px;
+  border: none;
 }
 
 .filter-button:hover,
@@ -205,7 +195,7 @@ li {
   border: 1px solid #eeeeee;
 }
 
-.heading-portfolio {
+.portfolio-heading {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -213,11 +203,11 @@ li {
   letter-spacing: 0.06em;
 }
 
-.text-portfolio {
+.portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1.875;
   /* identical to box height, or 188% */
-
   letter-spacing: 0.03em;
-
   color: var(--text-secondary);
 }
